# tycho

./: CMakeLists.txt  Doxyfile  README.md
include/tycho/: plotter.h
src/: plotter.c
tests/: labels.c  line_style_extras.c  logscale.c  multi_plotter.c  multiplot.c  plotter_options.c  ranges.c  save.c  simple_2d.c  simple_3d.c  style_2d.c  style_3d.c  terminal.c
